--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,10 @@
 body {
+    /* image for background */
+    background-image: url('./images/low_contrast_linen.png');
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     line-height: 1;
-  }
+}
   
   textarea{
     background: transparent;
@@ -16,7 +18,7 @@ body {
   .jumbotron {
     text-align: center;
     background-color: transparent;
-    color: black;
+    color: white;
     border-radius: 0;
     border-bottom: 10px solid black;
   }
